k8s/cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron
  namespace: eramba
  labels:
    app: cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cron
  template:
    metadata:
      labels:
        app: cron
    spec:
      containers:
      - name: cron
        image: ghcr.io/eramba/eramba:latest
        command: [ "cron", "-f" ]
        volumeMounts:
        - name: eramba-data
          mountPath: /var/www/eramba/app/upgrade/data
        - name: eramba-logs
          mountPath: /var/www/eramba/app/upgrade/logs
        - name: crontab
          mountPath: /etc/cron.d/eramba-crontab
          subPath: crontab
        - name: docker-env
          mountPath: /var/www/docker.env
          subPath: .env
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
      volumes:
      - name: eramba-data
        persistentVolumeClaim:
          claimName: eramba-data-pvc
      - name: eramba-logs
        persistentVolumeClaim:
          claimName: eramba-logs-pvc
      - name: crontab
        configMap:
          name: crontab-config
      - name: docker-env
        configMap:
          name: eramba-config
